--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-paginate": "^8.0.0",
     "react-popper": "^2.2.5",
     "react-query": "^3.33.4",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2",
