--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@tinymce/tinymce-react": "^3.13.0",
-    "antd": "^4.19.0",
+    "antd": "^4.18.9",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.1",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
-    "copy-webpack-plugin": "^10.2.4",
     "dotenv": "^9.0.2",
     "eslint-webpack-plugin": "^2.5.4",
     "file-loader": "^6.2.0",
@@ -22,7 +21,6 @@
     "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
     "mockjs": "^1.1.0",
-    "moment": "^2.29.1",
     "path": "^0.12.7",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
@@ -37,7 +35,7 @@
     "react-query": "^3.33.4",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "4.0.3",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "web-vitals": "^1.1.2",
@@ -88,8 +86,8 @@
     "eslint": "^7.25.0",
     "eslint-plugin-react": "^7.23.2",
     "html-webpack-plugin": "^5.3.1",
-    "mockjs-webpack-plugin": "^1.0.0",
+    "mockjs-webpack-plugin": "^3.0.1",
     "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^4.7.4"
+    "webpack-dev-server": "^3.11.2"
   }
 }
