--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
     "mockjs": "^1.1.0",
+    "moment": "^2.29.1",
     "path": "^0.12.7",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
