--- a/package.json
+++ b/package.json
@@ -34,8 +34,11 @@
     "react-paginate": "^8.0.0",
     "react-popper": "^2.2.5",
     "react-query": "^3.33.4",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "web-vitals": "^1.1.2",
     "webpack": "^5.36.2",
     "webpack-mock-dev-server": "^1.3.4",
