--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-toastify": "^8.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2",
     "webpack-mock-dev-server": "^1.3.4",
     "webpack-shell-plugin-next": "^2.2.2"
